--- a/Domain/Sales.Domain.Interfaces/Sales.Domain.Interfaces.csproj
+++ b/Domain/Sales.Domain.Interfaces/Sales.Domain.Interfaces.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Sales.Domain.Models\Sales.Domain.Models.csproj" />
+    </ItemGroup>
+
 </Project>
