--- a/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
+++ b/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
@@ -14,4 +14,27 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\Sales.Application.Services\Sales.Application.Services.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Sales.Infrastructure.FileIO\Sales.Infrastructure.FileIO.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0-rc.1.24431.7" />
+      <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.44" />
+      <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.44" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
