[CSJHW-3]: Feat: Added the ability to change the capacity of reader and writer channels

--- a/Presentation/Sales.Presentation.Console/appsettings.json
+++ b/Presentation/Sales.Presentation.Console/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppSettings": {
     "ParallelismDegree": 100,
+    "ChannelReaderCapacityInMb": 10,
+    "ChannelWriterCapacityInMb": 10,
     "InputFilePath": "input.csv",
     "OutputFilePath": "output.csv"
   }
