--- a/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
+++ b/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
@@ -29,12 +29,19 @@
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0-rc.1.24431.7" />
       <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.44" />
       <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.44" />
+      <PackageReference Include="Spectre.Console.Json" Version="0.49.2-preview.0.44" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="FluentValidation">
+        <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\fluentvalidation\11.10.0\lib\net8.0\FluentValidation.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
