--- a/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
+++ b/Presentation/Sales.Presentation.Console/Sales.Presentation.Console.csproj
@@ -14,28 +14,23 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0-rc.1.24431.7" />
-      <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.44" />
-      <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.44" />
-      <PackageReference Include="Spectre.Console.Json" Version="0.49.2-preview.0.44" />
+      <PackageReference Include="FluentValidation" Version="11.10.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="Spectre.Console" Version="0.49.1" />
+      <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
+      <PackageReference Include="Spectre.Console.Json" Version="0.49.1" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="FluentValidation">
-        <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\fluentvalidation\11.10.0\lib\net8.0\FluentValidation.dll</HintPath>
-      </Reference>
     </ItemGroup>
 
 </Project>
